# campus_utility_manager

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp
data/: input.txt  output.txt
eatrash/: admin.cpp  menu.h  menu_component.h  navigate_menu.cpp  output_error.cpp  output_error.h
eatrash/menu/: menu_component.cpp  menu_item.cpp  staff_manager.h
include/: admin.h  handle_invalid_input.h  user.h  utility.h
include/system/: data_manager.h  student_manager.h  user_data_manager.h
include/tui/: action.h  build_menu.h  handle_invalid_input.h  interaction.h  menu.h  menu_build.h  menu_item.h  navigate_menu.h
include/user/: admin.h  faculty.h  student.h  user.h  user_type.h
include/utility/: rate.h  utility_data.h  utility_type.h
src/: admin.cpp  handle_invalid_input.cpp  main.cpp
src/system/: user_data_manager.cpp
src/tui/: action.cpp  admin.cpp  build_menu.cpp  handle_invalid_input.cpp  interaction.cpp  menu.cpp  menu_build.cpp  menu_item.cpp  navigate_menu.cpp  run.cpp
src/user/: admin.cpp  faculty.cpp  student.cpp  user.cpp
src/utility/: rate.cpp  utility_data.cpp
system/: CMakeLists.txt
system/src/: user_data_manager.cpp
tui/: CMakeLists.txt
tui/include/tui/: action.h  admin.h  interaction.h  menu_build.h  menu_item.h  navigate_menu.h
tui/src/: action.cpp  admin.cpp  interaction.cpp  menu_build.cpp  menu_item.cpp  navigate_menu.cpp
user/: CMakeLists.txt
user/src/: faculty.cpp  student.cpp  user.cpp
utility/: CMakeLists.txt
utility/src/: rate.cpp  utility_data.cpp
(+8 files in other folders)
